cmake_minimum_required( VERSION 3.0 )
project (xyz_tile_scrapper)
set(CMAKE_CXX_STANDARD 14)
include_directories(srd)
include_directories(include)
find_package(GDAL REQUIRED)
include_directories( include ${GDAL_INCLUDE_DIRS})
add_executable(xyz_tilescrapper src/main.cpp src/string_utils.cpp src/download_utils.cpp src/geo_utils.cpp)
TARGET_LINK_LIBRARIES(xyz_tilescrapper boost_program_options)
TARGET_LINK_LIBRARIES(xyz_tilescrapper boost_filesystem)
TARGET_LINK_LIBRARIES(xyz_tilescrapper boost_system)
TARGET_LINK_LIBRARIES(xyz_tilescrapper curl)
target_link_libraries( xyz_tilescrapper ${GDAL_LIBRARIES})